@@ -2,6 +2,8 @@ Cascading Change Log
 
 1.2-WIP
 
+  Added c.c.Cascade#setMaxConcurrentFlows() property that limits the number of concurrently running Flows.
+
   Added c.c.Cascade#writeDOT method for visualizing the dependencies between flow instances.
 
   Added c.o.f.FilterPartialDuplicates filter and c.p.a.Unique sub-assembly for optimizing de-duping processes.
